# freelance-timeboard

./: .gitignore  LICENSE  README.md  TO_DO.md  index.html  package-lock.json  package.json  vite.config.js
docs/: PI_SETUP.md
pi-server/: Cargo.toml  README.md  ftb-pi-sync.service
pi-server/src/: main.rs
scripts/: cleanup-dev.sh  cleanup_android.sh
src/: main.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: db.rs  lib.rs  main.rs
src/data/: mock_work_logs.csv
