[package]
name = "ftb-pi-sync"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["cors"] }
uuid = { version = "1", features = ["v4"] }
time = { version = "0.3", features = ["formatting"] }
rusqlite = { version = "0.32", features = ["bundled"] }
