[package]
name = "freelance-timeboard"
version = "0.1.5"
description = "Freelance work hour and earnings tracker"
authors = ["umut"]
license = "MIT"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
aes-gcm = "0.10"
pbkdf2 = "0.12"
rand = "0.8"
base64 = "0.22"

tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
webbrowser = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
keyring = "3"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
